# ChangeLog for dev-java/netbeans-apisupport
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-apisupport/ChangeLog,v 1.21 2014/12/07 17:54:16 fordfrog Exp $

*netbeans-apisupport-8.0.2 (07 Dec 2014)

  07 Dec 2014; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-apisupport-8.0.2.ebuild:
  bumped to version 8.0.2 in 8.0 slot

*netbeans-apisupport-8.0 (23 Mar 2014)

  23 Mar 2014; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-apisupport-8.0.ebuild:
  new ebuild for version 8.0

*netbeans-apisupport-7.4 (16 Oct 2013)

  16 Oct 2013; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-apisupport-7.4.ebuild:
  version bump

*netbeans-apisupport-7.3 (21 Feb 2013)

  21 Feb 2013; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-apisupport-7.3.ebuild:
  version bump

  09 Dec 2012; <ago@gentoo.org> netbeans-apisupport-7.2.ebuild:
  Stable for x86, wrt bug #441170

  09 Dec 2012; <ago@gentoo.org> netbeans-apisupport-7.2.ebuild:
  Stable for amd64, wrt bug #441170

*netbeans-apisupport-7.2 (25 Jul 2012)

  25 Jul 2012; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-apisupport-7.2.ebuild:
  netbeans 7.2 release

  30 May 2012; Johannes Huber <johu@gentoo.org>
  netbeans-apisupport-7.1.2.ebuild:
  Stable for x86, wrt bug #417799

  28 May 2012; Agostino Sarubbo <ago@gentoo.org>
  netbeans-apisupport-7.1.2.ebuild:
  Stable for amd64, wrt bug #417799

  07 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  netbeans-apisupport-7.1.1.ebuild:
  x86 stable wrt bug #414387

  06 May 2012; Agostino Sarubbo <ago@gentoo.org>
  netbeans-apisupport-7.1.1.ebuild:
  Stable for amd64, wrt bug #414387

*netbeans-apisupport-7.1.2 (26 Apr 2012)

  26 Apr 2012; Miroslav Šulc <fordfrog@gentoo.org>
  +netbeans-apisupport-7.1.2.ebuild:
  Version bump in 7.1 slot

*netbeans-apisupport-7.1.1 (05 Mar 2012)

  05 Mar 2012; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-apisupport-7.1.ebuild, +netbeans-apisupport-7.1.1.ebuild: