@@ -19,7 +19,7 @@ EBUILD netbeans-apisupport-7.1.2.ebuild 3262 SHA256 b17b19ce143025ce12070d217c5b
 EBUILD netbeans-apisupport-7.2.ebuild 3242 SHA256 644b2d157afb967447aa754393eff29f6cebcd757958a77ca340409dddfb5113 SHA512 d26ff4c90442e8e10a589d7c85cd852e7f0113c860c263ef109b69a21e8737e1c52efe5ea71cba02e647e9028b5cb43950e40e61c1cff3b4ea57cd002cc611e2 WHIRLPOOL 81253ae0e5875aafe0b147c5cbe6342249b8cfb519b4e3a28ebf165518faa7d091ca465d58cccc9a6f0e707f9440f83fab558dc08effcfa9472781777e4d40cc
 EBUILD netbeans-apisupport-7.3.ebuild 3266 SHA256 6a83539ec16e42d6ae2221f3c662362aac24876f4f10d304d06f1734d836722c SHA512 83ed202a31797b684e0cd16603e6c065b5a091d6efe2337ad45594f88380217af3ba46af9176229993ddea734d4b3ce9d2364d2713a57679b916ff347d550b17 WHIRLPOOL b149066f087764ff6e41c1e32fe5f59757766e1051da4a8a36b27f6e1deefbb558cedd1a0aa9b2355ee262a40cbbf734df904d97814f6fad499dd40eea1304e2
 EBUILD netbeans-apisupport-7.4.ebuild 3441 SHA256 b537ab0becfda1a59322b442cefeb86c0832f861908bcdbbb12c7031cdf58277 SHA512 1cbf62af374bffa62d373d1d4e1e3f687520ce62fe777df3b0e4d46b344c1bfc6be86e32864fd626668f47c5313a4f8063fdd9b077153a1b08f2da9026df1ae1 WHIRLPOOL eeee97afad78c084c1fa64df2362f047b1c423c9df94ed6d623f4bc9b9925c40113e39b45702d130955c7322df8ce177e5998aade428413ce20bc313b3d5a9c0
-EBUILD netbeans-apisupport-8.0.2.ebuild 3447 SHA256 2a3509f8a63c71f90487440dd132db208df1cd5970a63d61c064f03db7203595 SHA512 5e49b8d1f4c50a126c69fa617eb595bfebd1298f89c24f2833fab0fb8172a18754433bc9784926f8007573dd0434c411ca5e51eaf1fa5aada19222c0b5bfa40d WHIRLPOOL 273eeca10354303ab288b50960130c24affd64ff64d896fdb4704acadab85e4d982fa415b67d14fe9a3fac83559a2fea958a9c0428db0a5c3a0f47ba209a1d3e
+EBUILD netbeans-apisupport-8.0.2.ebuild 3445 SHA256 850aa664dc5e7bd2b34387ef65cad786e4ad7c46bcea529c8bb0545a58b9de77 SHA512 6eb0a8f591f714e280742eba303790bdea0c1450bb5c11204ddff64c2bc4125fc306501fa7d44b367e91684fba04015f088bb9242d86cf2e4e05fe9bb2609884 WHIRLPOOL 43247c4945fd79e401b8a0ee0d3eba5a484c368252dabf1b21f30d387428624296f69615b091a3c1f2b50aeea6c3421d4dd70b13b582c6b293ad76ee980d1d6f
 EBUILD netbeans-apisupport-8.0.ebuild 3435 SHA256 92258635bec99e93ba6547ef7f032c1e50e73caebaac2c89e2dc63b3945b3bd7 SHA512 465e78f7c77fa30d23d8d51542b742401cbe298d22eb1a90413d33b601d4de756c55914e0959be6fc52d9e5b9bfdd8a57936b20665b1ed1ef32f99bb5476b0ee WHIRLPOOL bc83fda458cf932a1f3caf3ec5166741f5103cea08e2d7d8afadf5cdf67aa4dd18928e3d82f81d4130c674f07da8362d07b9aab5bf53152387d7b287a1768e29
-MISC ChangeLog 3273 SHA256 111db3a102e742d433b91a1e6642f41974df7d119807b9cbecf6134ed08c2431 SHA512 a7b083aaa59ecebb33d8a6c55d7e6e3aeb4a5bdf5f13122eddb1b59b61f3ab1ec93a765c77c2fb50332310bb590ea6326af97668ea773ed5c26b2e590fae72b9 WHIRLPOOL 7ec0d097246443e35e9d8ed29f7c7f4272c2d36b8f43c17a2dd6019e0fa4e719e55e0b0b90c3fac92597e36f2c175c2ed8d5cb4f7fe96474081da10746ceca39
+MISC ChangeLog 3395 SHA256 3d95485b0c7f6f149ed305eea7a08d5b5634a0d50207be41d54054888a53513b SHA512 bd272e8eace63232860de1da4f2a9f3769ecba8139d480ac923ec275f3e8587b494ea58e6e968fd9c6c2986694620d03d32d92347946ad380dd6b9fba8adc5fa WHIRLPOOL 7923484afaf0487c128cda014fe65ae8ffe381c66447d9ca41035be6982cf1a9fb391115e81a56b33c8cbdbf1f197b401b6bdb1df80377d42aa43d3e9b437f3f
 MISC metadata.xml 251 SHA256 5a4ff53a9862390a48d45c79be24086646e7a6ff0c5bdf0fcb799d0871299003 SHA512 04153cbd9776ad56a94d6a47d043df15d082d8888df8658f18d0d4b659c6c0526ab3a9b22ccbe2471091bf2d8165f224854bc99c51f3664aaf350ccb93532a7c WHIRLPOOL 2ee8a646c6e23bc46c72cac0ecb5cfe43720ec42404ddaeed8ab1b59d139b3d5c1a94764de847f979da978c001c9f02f709d663a68eeea64d19e88f1fefbca43
