@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/netbeans-apisupport
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-apisupport/ChangeLog,v 1.21 2014/12/07 17:54:16 fordfrog Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/netbeans-apisupport/ChangeLog,v 1.22 2015/02/04 21:36:17 fordfrog Exp $
+
+  04 Feb 2015; Miroslav Šulc <fordfrog@gentoo.org>
+  netbeans-apisupport-8.0.2.ebuild:
+  restricted compilation to jdk7
 
 *netbeans-apisupport-8.0.2 (07 Dec 2014)
 
